--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <div class="news-container">
-        <h1>Man Sells Dog for 5 SOL</h1>
+        <h1>Man Sells Dog for 5 SOL - pls just send this shit market is so ahh</h1>
         <img src="image.png" alt="Dog Sold for 5 SOL">
         <p id="article-text"></p>
     </div>
@@ -36,9 +36,6 @@
     <script>
         const randomArticles = [
             "Sources have confirmed that this is ong true. In an unexpected turn of events, a man from Florida reportedly sold his beloved German Shepherd, Daisy, for just 5 SOL, claiming he needed funds cus he got rugged on libra coin. Neighbors were shocked, but the new owner says the dog is enjoying its new home.",
-            "A crypto enthusiast made headlines today after trading his loyal dog for 5 SOL. When questioned about his decision, he stated, 'I believe in the future of Solana more than I do in companionship.' The dog's new owner, however, is thrilled with the deal.",
-            "In what many are calling the worst trade of the year, a man exchanged his German Shepherd for a mere 5 SOL. Reports suggest the seller immediately regretted his decision and tried to buy the dog back, but the new owner refused to sell."
-        ];
         document.getElementById("article-text").innerText = randomArticles[Math.floor(Math.random() * randomArticles.length)];
     </script>
 </body>
