--- a/index.html
+++ b/index.html
@@ -3,40 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Man Sells Dog for 5 SOL - pls just send this shit market is so ahh - News</title>
+    <title>RealNewsONG - Man Sells Dog for 5 SOL</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+        }
+        .header {
+            background-color: #0073e6;
+            color: white;
             text-align: center;
             padding: 20px;
+            font-size: 24px;
+            font-weight: bold;
         }
-        .news-container {
+        .container {
+            max-width: 900px;
+            margin: 20px auto;
             background: white;
             padding: 20px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 600px;
-            margin: auto;
         }
-        img {
+        .news-title {
+            font-size: 28px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+        .news-image {
             width: 100%;
+            height: auto;
             border-radius: 8px;
-            margin-bottom: 15px;
+        }
+        .news-content {
+            font-size: 18px;
+            line-height: 1.6;
+            margin-top: 15px;
+        }
+        .footer {
+            text-align: center;
+            padding: 10px;
+            font-size: 14px;
+            background-color: #0073e6;
+            color: white;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
-    <div class="news-container">
-        <h1>Man Sells Dog for 5 SOL - pls just send this shit market is so ahh</h1>
-        <img src="image.png" alt="Dog Sold for 5 SOL">
-        <p id="article-text"></p>
+
+    <div class="header">RealNewsONG</div>
+
+    <div class="container">
+        <div class="news-title">Man Sells Dog for 5 SOL - pls just send this market is so ahh ong its real</div>
+        <img src="image.png" alt="Dog Sold for 5 SOL" class="news-image">
+        <div class="news-content">
+            In an unexpected turn of events, a local man sold his beloved German Shepherd, Daisy, for 5 SOL (Solana).  
+            Witnesses report that the buyer, an anonymous crypto enthusiast, claimed the dog was “worth at least 10 SOL” due to its  
+            incredible loyalty and ability to sniff out blockchain scams. The seller, however, simply shrugged and said,  
+            "Times are tough."  
+            <br><br>  
+            Authorities are still trying to determine if the dog understands smart contracts.
+        </div>
     </div>
-    
-    <script>
-        const randomArticles = [
-            "Sources have confirmed that this is ong true. In an unexpected turn of events, a man from Florida reportedly sold his beloved German Shepherd, Daisy, for just 5 SOL, claiming he needed funds cus he got rugged on libra coin. Neighbors were shocked, but the new owner says the dog is enjoying its new home.",
-        document.getElementById("article-text").innerText = randomArticles[Math.floor(Math.random() * randomArticles.length)];
-    </script>
+
+    <div class="footer">© 2025 RealNewsONG | All Rights Reserved</div>
+
 </body>
 </html>
