--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RealNewsONG - Man Sells Dog for 5 SOL</title>
+    <title>RealNewsONG - Man Sells Dog for 3 SOL</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -57,10 +57,10 @@
     <div class="header">RealNewsONG</div>
 
     <div class="container">
-        <div class="news-title">Man Sells Dog for 5 SOL - pls just send this market is so ahh ong its real</div>
+        <div class="news-title">Man Sells Dog for 3 SOL - pls just send this market is so ahh ong its real</div>
         <img src="image.png" alt="Dog Sold for 5 SOL" class="news-image">
         <div class="news-content">
-            In an unexpected turn of events, a local man sold his beloved German Shepherd, Daisy, for 5 SOL (Solana).  
+            In an unexpected turn of events, a local man sold his beloved German Shepherd, Luna, for 3 SOL (Solana).  
             Witnesses report that the buyer, an anonymous crypto enthusiast, claimed the dog was “worth at least 10 SOL” due to its  
             incredible loyalty and ability to sniff out blockchain scams. The seller, however, simply shrugged and said,  
             "Times are tough."  
